infer/tests/codetoanalyze/objc/errors/field_superclass/A.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */


#import <Foundation/NSObject.h>

@interface A : NSObject {
    @public int x;
    @public A *a;
}

@end
